Fixed cropped reviews
added margin-top

--- a/site/theme.css
+++ b/site/theme.css
@@ -196,6 +196,7 @@ body {
   padding-left: 1em;
   padding-right: 1em;
   border: 5px solid #51aa4c;
+  margin-top: 1em;
 }
 
 .rNaam {
